tests/ui/type-alias-impl-trait/future.stderr
error[E0277]: the trait bound `B: Bar` is not satisfied
  --> $DIR/future.rs:16:5
   |
LL |     async move { bar.bar() }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Bar` is not implemented for `B`
   |
note: required by a bound in `foo`
  --> $DIR/future.rs:15:11
   |
LL | fn foo<B: Bar>(bar: B) -> FooFuture<B> {
   |           ^^^ required by this bound in `foo`
help: consider restricting type parameter `B` with trait `Bar`
   |
LL | type FooFuture<B: Bar> = impl Future<Output = ()>;
   |                 +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
